--- a/style.css
+++ b/style.css
@@ -94,6 +94,28 @@ pre code {
   border: 0;
 }
 
+.col-md-7 pre,
+pre {
+    display: block;
+    margin: 2rem 0;
+    line-height: 1.4;
+    white-space: pre;
+    white-space: pre-wrap;
+}
+.col-md-7 pre {
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+}
+pre.code {
+margin-top: 0;
+}
+pre code {
+    padding: 0;
+    color: inherit;
+    background-color: transparent;
+    border: 0;
+}
+
 /*
  * The Grid
  */
@@ -143,31 +165,31 @@ pre code {
  */
 
 .masthead {
-  padding: 3rem 1rem;
-  color: rgba(255,255,255,.5);
-  text-align: center;
-  background-color: #333;
+padding: 3rem 1rem;
+color: rgba(255,255,255,.5);
+text-align: center;
+background-color: #c6002b;
 }
 .masthead h1 {
-  color: #fff;
-  margin-bottom: .25rem;
-  font-size: 2.5rem;
+color: #fff;
+margin-bottom: .25rem;
+font-size: 2.5rem;
 }
 .masthead .icon {
-  display: inline-block;
-  font-size: 3rem;
-  margin: 0 .5rem;
+display: inline-block;
+font-size: 3rem;
+margin: 0 .5rem;
 }
 .masthead-links {
-  font-size: 2rem;
+font-size: 2rem;
 }
 .masthead-links a {
-  color: rgba(255,255,255,.5);
-  text-decoration: none;
-  transition: all .15s linear;
+color: rgba(255,255,255,.5);
+text-decoration: none;
+transition: all .15s linear;
 }
 .masthead-links a:hover {
-  color: #fff;
+color: #fff;
 }
 
 @media (min-width: 38em) {
@@ -193,5 +215,13 @@ pre code {
 }
 
 .section {
-  border-bottom: 1px solid #dfe1e8;
+border-bottom: 1px solid #dfe1e8;
+display: -webkit-box;
+display: -webkit-flex;
+display: -ms-flexbox;
+display: flex;
+}
+
+.black-text {
+color: #000;
 }
