--- a/template.ejs
+++ b/template.ejs
@@ -6,6 +6,7 @@
         <script src="https://use.typekit.net/tvm5tle.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <style><%- codeStyle %><%- tmplStyle %><%- processedCSS %></style>
     </head>
     <body>
@@ -24,5 +25,7 @@
             </div>
             <% }) %>
         </div>
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     </body>
 </html>
